Saf Bootstrap Dosyaları Silindi

--- a/Views/Home/_movies.cshtml
+++ b/Views/Home/_movies.cshtml
@@ -9,6 +9,9 @@
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quis quidem dignissimos
                     illum, quisquam, inventore autem modi doloribus amet maxime fuga nostrum quibusdam, quo est?
                     Inventore, error laudantium. Quos, provident!</p>
+                <p class="card-text">
+                    <small>3 gün önce</small>
+                </p>
             </div>
         </div>
     </div>
