--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
-﻿@{
+﻿@model IEnumerable<Movie>
+@{
     ViewData["Title"] = "Anasayfa";
 }
 
 <div class="row">
     <div class="col-md-3">
-        @Html.Partial("_menu")
+        <partial name="_menu" />
     </div>
     <div class="col-md-9">
-        @Html.Partial("_movies")
+        <partial name="_movies" model="Model" />
     </div>
 </div>
