Günlük Sonu Güncellemesi

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<Movie>
+﻿@model MovieCategoryModel
 @{
     ViewData["Title"] = "Anasayfa";
 }
 
 <div class="row">
     <div class="col-md-3">
-        <partial name="_menu" />
+        @Html.Partial("_menu", Model.Categories)
     </div>
     <div class="col-md-9">
-        <partial name="_movies" model="Model" />
+        @Html.Partial("_movies", Model.Movies)
     </div>
 </div>
