--- a/Views/Home/_movies.cshtml
+++ b/Views/Home/_movies.cshtml
@@ -11,8 +11,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
-                        <a asp-action="details" asp-controller="movie" asp-route-id="@movie.Id"
-                    class="text-decoration-none text-dark">
+                        <a asp-action="details" asp-controller="movie" asp-route-id="@movie.Id" class="text-decoration-none text-dark">
                             <h5 class="card-title">@movie.Name</h5>
                         </a>
                         <p class="card-text">@Html.Raw(movie.ShortDescription)</p>
