--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@model Movie
+﻿@model MovieCategoryModel
 @{
     @if (Model != null)
     {
-        ViewData["Title"] = Model.Name;
+        ViewData["Title"] = Model.Movie.Name;
     }
     else
     {
@@ -13,23 +13,20 @@
 {
     <div class="row">
         <div class="col-md-3">
-            <partial name="_menu" />
+            @Html.Partial("_menu", Model.Categories)
         </div>
         <div class="col-md-9">
 
             <div class="card p-3 mb-3">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="/img/@Model.ImageUrl" class="card-img" alt="@Model.Description">
+                        <img src="/img/@Model.Movie.ImageUrl" class="card-img" alt="@Model.Movie.Description">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <a asp-action="details" asp-controller="movie" asp-route-id="@Model.Id"
-                            class="text-decoration-none text-dark">
-                                <h5 class="card-title">@Model.Name</h5>
-                            </a>
-                            <p class="card-text">Kısa Açıklama: @Html.Raw(Model.ShortDescription)</p>
-                            <p class="card-text">Açıklama: @Html.Raw(Model.Description)</p>
+                            <h5 class="card-title">@Model.Movie.Name</h5>
+                            <p class="card-text">Kısa Açıklama:<br /> @Html.Raw(Model.Movie.ShortDescription)</p>
+                            <p class="card-text">Açıklama:<br /> @Html.Raw(Model.Movie.Description)</p>
                             <p class="card-text">
                                 <small>3 gün önce</small>
                             </p>
