--- a/Views/Shared/_menu.cshtml
+++ b/Views/Shared/_menu.cshtml
@@ -1,7 +1,8 @@
+@model IEnumerable<Category>
+
 <ul class="list-group">
-    <li class="list-group-item active" aria-current="true">Category Item 1</li>
-    <li class="list-group-item">Category Item 2</li>
-    <li class="list-group-item">Category Item 3</li>
-    <li class="list-group-item">Category Item 4</li>
-    <li class="list-group-item">Category Item 5</li>
+    @foreach (var category in Model)
+    {
+        <li class="list-group-item"><a href="#" class="text-dark text-decoration-none list-group-item-action">@category.CategoryName</a></li>
+    }
 </ul>
