--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model MovieCategoryModel
+﻿@model IEnumerable<Movie>
 @{
     ViewData["Title"] = "Anasayfa";
 }
 
 <div class="row">
     <div class="col-md-3">
-        @Html.Partial("_menu", Model.Categories)
+        @await Component.InvokeAsync("CategoryMenu")
     </div>
     <div class="col-md-9">
-        @Html.Partial("_movies", Model.Movies)
+        @Html.Partial("_movies", Model)
     </div>
 </div>
